--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.19",
+    "commandbar": "^1.12.0",
     "dexie": "^4.0.4",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
